--- a/WindowsFormsAppSeguretat/FormSeguretat.resx
+++ b/WindowsFormsAppSeguretat/FormSeguretat.resx
@@ -120,4 +120,213 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAAAAAAAEAIAC1LwAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAL3xJ
+        REFUeNrtnXmcXUWZ979VZ7lbd9/uTjrpdPaQhbBHgiBbCDthBMHldWdeF0YdFRl9cdR3dGAcx9EX2WQR
+        R8dtXBCEgIgGJBBQkGxACFnp7El3p/fuu99z6v3jdKfTBEKWu5xzb/0+n4YwcfqeW1W/73nqqaqnBFqV
+        qc3feP3/ZQwwDzgHOBOYgqCB7mQ923skMIhgJ7AM21yGEM/w21W7eM88iIUg78JFd+h2rTAJ3QQVb/4m
+        4HLgI8DJQAMg9/V+dxK2dIGr9hsRYhBDbMaUvyRk/YZnN23n3NngOLDoHt2+GgBaATC+Cfwd8E/A24HQ
+        G/b+6wEw6u+FwhCvYBq30Rj5JQOZFIsWwtN/hfNu0+2tAaDlU/M3AJ8DrgMaD9r7BwPAsKRIYhk/IWx9
+        k8HMHqY0QiID59+u2z3gkroJKs7804C7gH85qPkPR66Kks1/hmT2J8TsE2jdC4aAJf+o214DQMtH5j8B
+        uBd4P94UoHBSQM65mGT2x9RFzmJnHwgBj31a94EGgJYPzH8m8CPgoqJ+Zt49jVT2x9SFFrG+A6SARzUE
+        NAC0ymn+y4D/wkv2FV95dzbp/A+ZUv8Bjh0vMST8QUNAA0Cr1OaXwAeAe4C5JX0Gx20hk/8+q3d9mnjY
+        1pFAMKVXAYJpfAAb+ARwIzD2iHv/UFYBDiYpBrHNm6mP/D+S2UF6UzCxHhbcqvsrANIRQDDNHwO+DHz7
+        iM1fKLmqhkz+K/Qkv40hG4nZ3grB45/VfaYBoFUE808Fbga+CtT64vmUssk6nyaR+SGmcTxburxVA50X
+        8L30FCA4xgc4D7gJbz9/YXr/aKcAr5cpX8E2v87UxofZ1evQ1gfHjNNTAp/K0E0QCPPHgH/Ae/OfWLDP
+        EEAqB70p741dCLlqHI57EQOZCGHrJSwjTdSGD86Hn7+g+9Vn0lMA/5t/OnAr8B1gUiCe31WNZPJfYyD9
+        IyzjJFo7QSk9JfCh9BTAv8YXwAV4Wf4zi9b7hZ4CvF6mXIdtfp2J8YdoG8gzvQna+2ChPkzkB+kpgD/N
+        Xwd8BvgucFzRPrMYU4DXy1VNOO7FJDIxQuYadnQnsQ34wHz4nxW638ssHQH4y/gS721/Pd4Z/lDRe7/Y
+        EcC+zxIupnwa27iZMTWP05XIUhOCnAMXf1+PAw2AqjY+eMt7nwT+N9BSst4vFQCGJUUvlvFrQuYdrN7x
+        KvMmw8kTYdNeXWNAA6AqzV8DXAl8ATi1pH1SDgAMf64hN2IadxK1f0Ffqpt42Cs7tuhuPT40AKrC+ALv
+        8M4XgCuAaFl6vxwA2Pf5Io8pn8Q2b6a59kna+vP76g/qaYEGQIUaH2AK8Pd4e/knl7X3ywmAYUnRjWX8
+        D7Z5F4s+vIHf/0wRscBx4ZK79PjRAKgY408HrgY+hFegs7z7MPwCgOFnkfI1THkfIfOXnNj8Ki/udglb
+        XkRwmQaBBkAwTS+AWcB78Sr1HFd24/sRAKNBsA1T/g7b/AUT619me3eekAnZPMQjcO6tepxpAPje+BLv
+        jP77gfcNQcBf7e1HAIwGwW5MuRjL+BljYivpGMgRtqAhCsmsXjXQAPCd6cE7p38CXqGOd+OF/f7tfb8C
+        YH8ZogPDeBTL+Cm1oRW0DySIWBCxIJGFxqiOCjQAymp8ibd2fzawCFhIEPbtBwUA+1pZ9GDIv2DKxzCN
+        xxlfs5WdvTkMA2K2lzS8SK8eaACUxvTgld0+Fa8m34V4YX44UL0fJADse27hIMVODLEU03gM03iGyz7c
+        xsM/UVgG1IYg78BCfZWZBkBhDQ/e0dxjgUuAS4GTgHhgez+IABgNgzSG2ISUf8I2HiNkrmZrdw/jary/
+        j9re3YbZvM4ZaAAckeFNvDf9bOA0YAFwBjC+Ino/6ADY/7sI0YchX0KIp7CNVaBW0RDrYldvkpAJUkLU
+        gvPfA8se1EVKqhYAb2724TZpwLthZ/5+P9OA+opqs0oCwAGjWiQwRDtCrMYQyzGN5UjxKs11XWztzg1t
+        R/YSiZbhfX9TVl0ysfIBcHCzgzdnj+G90ecNmf00vPl8I4W+YUcDoAzfUwD0YcjdCF7AlKuR4jkQO6gL
+        JTn31j4euta75MRxIWRC2ALT8AqZVPDUIbgAeGtjv17WkNHr8bbiHvO6n0lDhg8Ftk00AA4VCAroxhA9
+        SLEdV72MaezGMraQd9ZgG73UhQdZtSPB5EYPDK7yEouGBNvwogZDjvy4KpBTCn8D4NBNbuKtv4eGjB7B
+        C+MbgWa8tfhho08ZgkBs6H9bvapWALwxFABSCHoxZC+CTbhqLbbZgSk7UGo3GWcnUiQJmy4hM0fYSnPG
+        nBT3PedimV45dBhpy6jtRROu8u1Nyv4DwBubPoJXJWcM0IRXC79x6L8b9/sZ/u/6IRjYeCF+9bzVNQAK
+        DwZBBkUKVAops0iRQoheUB04ajvQiWVkMOUAQnTguttx1W5qwwOcf3svi6/18guxkDfFuMA/y5P+AMAb
+        mz6Ot8S2YOjfc4fMP2xsm0qen2sABBEULpBBqSRSDmKIbShewDafxZLPc+ld7Sy+1ps+TKiDvnTZ8wvl
+        BcCBxg8PGf1CvHX2eRTqjnstDYBySYokUm7AEEuwjD9hmyvpSfRTH/VKotWFy7b6UD4AjDa/AZyOVwjz
+        AryMvN6joAFQee3t7VV4Htu4g4bI43SnssRsL8FYhtoHpTfZgW/9GXiFMa6hVLXwtDQAyi0pejGN+wkZ
+        3+fye17isU+Do0oeDZQWAKPNH8E7Kvt54BQ9IjQAqlKG3IJl3E2NfS+ZfB+bu+CUFlhQmtxA6QAw2vxx
+        4J+Bz+Etx2lpAFRxP4g8tvFzwtZXSOfamT4GepKwsPhLh6WpTDPa/C3ALcAXtfm1tAClTLLO/yaZvZeQ
+        OYv17d4W5Sc/VwEAGG3+2cA9eAUxq3sTjpbWaAhAzrmCZPa/qQ2fxqZOLx/w9BcCDoARteBdcvlOdIZf
+        S+uNlXfPIpW9gzHR2ezqg109AQbAyNs/BvwL3vl5LS2tg0PgdFK5bxGxGqmPFvVW5eIBYMT8BvApvLBf
+        v/m1tA4NAleRzP4z8UgIU8KSzwYMACO6HPgyQSqVpaVVbiklyTqfpnPwg9y3EqziWLU4b+SRt38zcD9w
+        lu5RH0ovA/pfplxP1H4nrtqMacCldxb01xc7Angv3hZfLS2tI5HjHksmfw2XnyMwC2/Xwv/Gkbf/NODj
+        6BN7WlpHLgXk3Q/zh2dPJJWFxwqbECxWBCDw7r87SfegltZRynWnkc1/ggl1JkZhLVvY3zby9p8EfBCd
+        9dfSOnopIO+8i/aBWaRy8PR1PgXAiE7Hz1diaWkFTS4TybsLybvQXOtrAEi8Kj4R3WtaWgWSUpK8ew4t
+        dWG29/oaAOPw7sjT0tIqpFx1Bl3JFpJZHwJgZP5/Cl71XS0trcICoAVXnY0Cnvq8zwAwolOBWrS0tAor
+        pWyy+eNY1z5cxtx3ALDwSnxpaWkVQ1Icx7kzasg7vgRAFJiqe0lLq2iazmA2RqYwACj0Lj0bXcZbS6t4
+        clUNmbyBKszZjUIDwARqdC9paRUNACbZfMEi90JPAUz0+r+WVjEBYCBEiAId3iw0AGy8AiBagZHyftTQ
+        v7X8LYGBZdTsu4j0KFWMHIDe/+8LU+/35+H/FAKBxBQCA4khJJahkHYWx8mTVy451yHn5lHKHfo9Yt/I
+        8/6ou7fMBDCRIlqoZcBiAECiVQbDe0Y3hElMWkSFRZMRY6oZZ4oVZ6yMEpU2UWERExYRaRGTFuF6idOY
+        I5nPMOCk6c+l6M4mGMinyCuXnnyCTYNtbE91k3VzJJwsqXxaQ6F8MhAiivQnACwNgFIZ3vt3SNiMNSLM
+        tZqYF5rATKvRM70ZZ4wRJSosotJCvolJM6ZDp5t8/bt+6J+KrHIYzKdJOBn6nRRbEnvZlGinNdnBqr6t
+        dGUHGcgl9wOChkHxAUCkUMzVEUCgTK8QSJqMGuZYY5kfauHUUAvzQs1MMuuok6HD/q0OLi4K9SbLShJB
+        3IxSb0aZKBo4LjYRAaTcHF3ZQV5LtrOybytrB3bxcv92OjL95N38EAg0DAougQGEC9W2GgCBMD7Uywgn
+        h5q5NDqTiyIzmGE1Ui/DJbGYQnlPMfIPbGHQEqpnYriBcxuPJeFk6Mj28VzPZpZ2rWNF7xb2ZgZAuRoG
+        hZUEQoX6ZRoAvpVLWNjMscZyUXQGl0VnMS/UTIP0xyqrGgLD8IaUiLSYFmliemQcV44/ldZkB091rWdp
+        16usHdhFIpfSICgUAJQGQIXKs1VMhDk7MoWP1JzEwsh0Jpg1CJ8bR8HQNEIRkRYn1E7ihNpJfGjimbzU
+        v40H9qzgqa519GYHNQiOGgDK8utOQEP37JEbv05GOC8yjY/WnswFkRnUy2BepTACA6g3oywccxyn189k
+        df9W7t+znD93rqU7M6BBcDQQKJDMIjyY7tHDtEutDHFJZCbX1J3CgvBUamWogr6dwlGKsDQ5q2E2p8an
+        81L/dh7Ys5zHOl6mJzsAQgeNhyHhdwBoHaI1JJLTw5O5Pn4Gi6KziEm7gr8tOMrFFgan1x/DKXVTeef4
+        edy7fSnPdG3cb+VAK+gA0L14CHaYZMb5RO3b+Hjd25hk1lXRN/dAYAnJOY1zOL52EovbV/LfO56hNdG+
+        3xjXOkgjFqyBNABK3HMRYfHO2Byuj7+Dt4cnvukGnWoBQb0Z5ZpJ53Bmwyx+vGMZD7et8jYW6WnBm0mA
+        0lOAIA75KWY9X64/m4/UnkxtBYf7h9cq3hbm2bFmbpx9NWc1zuLW1j+xcWCPnhIczGcFOrelI4ASDHEQ
+        LIhM56bGhZwb1gWT3kiuUtjC4J3j5jEzOp6bWx/j8b2v4CpXD6kDh1TBGqTQb2wNgNf1VFTYfCZ+Gj8f
+        d5U2/1u2lgeCuTUT+c7c9/P56RcTt6IUas27YhoJZKGObuspQBF7apIZ518aFvCR2pOICEs3ySHKVS4N
+        Zozrpl/MsTUT+O5rf+C1wXY9Jdg3tJTQUwCfm3+ONZabx17K5dFZujmOqAUVBpLLx53C+FCcGzc+yIu9
+        2zQEPOkpgJ+H7ttCLdw77gpt/qNuSW9KMD8+ne/MfT9njZmtpwNewwi/lgSr8imA4tzwNH7YdIWe7xdQ
+        Xl6ghe/MfT8XjzsRXbpMRwC+1KLobO4ddwVvC03Qri0CBKZExvCtY9/Hu5rnV3djKCUKBUEdARSmR7gw
+        MoM7xi5ijjVGu7WIEBgfquMbs6/i8vGnUMWRgK+nAFUWAShOD0/mlrGXMsNq0C4tAQTG2jV8ffaVnDd2
+        bnXmBPQ+AP/0xAn2eG4bcykn2OO0O0sIgZZQA9+YfRXzG2ZUIQSUTgL6wfwzrEZuGXspp4cnaVeWAQIz
+        o+P5+ux3Mae2pYogoIYiAP/mAKogAlCMMWJ8e8xFXBjRlyGXEwLz6qbyL7OvZHy4vnogoBQ6AiijTGFw
+        Xfx0ro4dq13oAwic23gsn59xEWHTpkoSg77OAVS4FO+KHctn42/H0Duf/dIlvKf57VxVDcuDwze4Kb0M
+        WJbWP9Fu5hsN5/mmOq+Wt204athcN/1i3t5wjFeKvKK/cOGiHA2AwxhmjTLKvzaepzP+PpSrFBPDjXxx
+        xmWMDzdUdj6ggPe4agAcogSSa+tO5YroHO0230LA5R31M/nUtIWYsoIvqVZK+HUKUKErAIr5oRY+HT8N
+        U5eq8rkE724+jTMbZ1X+VMCHAHAq0fwxEeIL9WcwxYzrEeP73lI0WjVcO3Uh9XYNFbkqIIUq1O3AhQZA
+        vhIH1ZWxOVwZ06F/UOQolzPrZ3H1hApcFRB4NRGEBkAJpJhqNvCF+ncQE7qIZ5BkSYNrJp3N7JoJlZcQ
+        FKJgX6gYAKiY1pZIPl43j/mhFu2ogMlVihnRcVwz+RxMaVbQNxO+ngI4lQMAxRx7LB+sOVHXOAtqDyq4
+        rOkkTqybVFkJQUHBvkwxIoAKaWnB+2uO5xirUTspqABA0WTX8u4Jp2FUUhQghOvnHEAFRACKmVYj76s5
+        Qbso+F3JxU0nMLe2pXKiAIFbqLBUA+BNWvi9seN1dZ8KkItiQqieq5pPRVbK5iAhfAuACsgBKKaZ9Xyg
+        9gSEnv1XhoZyAbNi44O/IiAAgVOoPXc6AngDXRadxXF2kzZOhchFMSk8houbTqyEvaoKhOPnKUCgJ1o1
+        MsTlsVn6qO9RytuvIrwfHzyPFIILxh5PgxX43YEKUbj9NnoK8Lq2Pd4ax9tDE7WDj9T4Q9npVC7HQDrN
+        QCpFMpvFVWrf35VDrlLMjjVzUnxy0KcBigJuuCv02kiaQEcAgkuix9BkxLSTj1Ad/f1sbGtjR3c3g5kM
+        SinClkVzPM6s8eOZ1NiIZRioEptQoagzIywcM5dlXRtK/vkFlIMQqUItAxYaAAkCux1YMdaIcUl0pnbx
+        YUoAOdfllZ07WbF1K73J5Ki3bB/Q1tfHhrY25ra0cMaMGdSEw2WBwLmNc2gOxdmT7iGgCYEcgv5C/bJC
+        TwECDYD5oRZO1MU+Dtv8Wcfhb62tLNuwgd5EYvT8f+hHCkE6l+PFbdtYun49yWy25PZTSjElMpYzGo4J
+        7jRAkUPRi+vPegAJAnskWLIgPI1aGdKuPkzzv9DayorWVrKOc9B5/vDfbGxr48Vt20o+V1RARFqcFp8R
+        4J2BKkve6cQpTOsVGgBJIBfARqVOhpgf1od+jsj8W7aQcw99b4rruqzdvZvuwcGSJwZdFKfWT6PeihLQ
+        fHWWrNPnVwDkhiAQOE0y65hr6bX/YpsfvOlBfyrFzp6eMkwDYLwdZ3KkMZjTAClcTOliFsa6xdgHkAhc
+        oyrFKXYzYw1d6bfY5h+W47p0JxK4ZUgENlgxTo1PC2gHiDyWofwKACeIABBCMj/UQkhU0rlx/5p/WJlc
+        DqcMb2FTSI6tacGUVhABkMGULoaOAAokRb0M6/l/ic0PELIsjDJsDnJRzItPoyGIeQAhUpiG41cAOMBg
+        0Ab3OCPGMaY+919K8xtS0hiLIcsAAKVgjBVjXKguiHnABKbM6wigcMOBKWacGqlr/pXK/Eop6iIRJjU0
+        lMl/ilozzLG1EwggAfqxjZyfqwIHCwAKplr1REUA54MBND+AlJLjWlpojMXKsiVXASFpMd6OBw8ASvUQ
+        tX0LADdwABCCKWZcX/hRIvMDzBo/nnlTppQl/B8Z+JIGKwZB63dXdXLyf2T8WhIMoDdI7WkLU1/48Sbm
+        /1sRzH/MuHEsmDOHaChU1nevQjG7ppkaM0xgogAx5K/7Pg7SnzkAgE4Ccx5AERUWU8167fo3MP/KIpj/
+        /LlziUejZT+Np1BMjjQSMYKU+xFgGylsw4fXg8+8cfhPe4FsUJo0IkwmmrXa+VVk/iECEJUhr/BLUNIA
+        AgdD9iEFLLjVZwAYUSeQCcqgDwmTqL71p7rMPyRDSMJGgJK/ijRCtBXyGHOxABCYCCAqLUxR3cU/q9H8
+        CrCEQb0VIzghgEriuNtwCnfgthgA6CNAm4Giwqrq+n8CUXXmH5YlTeqtAJ3/ECJNzuks5DnqYoz8DNAV
+        GABIC6OKlwCz+XzRsv1+Nj8oLCGpNcPB6SxDpolYDqHCnVkpxumXLN40IADyVgHMKq3/r5Riza7drNy6
+        lbxTsNumAmB+L+g3hCRmBKgAjBC9hMwc+cKFAMUAQCY4ABiaAvgoAlBKkczlGEhlyOQdhICobVEbDhEy
+        C9ddrlJs6exmc0cnjuNUlfmHZQgZsGVA2gjbadKFS7EVKwLYG6RW9YsGM1m2dfXS3j9AJu/gui4IgSEF
+        MdtmUkOciQ112MbRXXHlKkXr3m427+3CcV2vKk8BzBok8wdSjruNM49P8PRLvgYABCgHkFQ5HOWWvUDs
+        3sEE6/Z00JfyVlD3PY5S5B1FbzJNfzpDdyLJsROaiNlH9uYaNv+mDs/8hVIQze8ol5QTkAUr70qwTn77
+        rGJCfcF+bbFi34DsBhQkVY58mZeB+lJp1u5qpy+ZHurnN3hS4U0PdvcN8MrOdhKZwx+4rzd/oerxBdH8
+        YggACScoW1YEWEYKy4ACgruwABi9GzAQLZt0hyKAMslxXV7b281AOnNIhhRAx2CCV3YdHgT0m//Alswp
+        l4F8OiiPm8eQvYXcBVh4AIxoN94tQf4HgMrhlPEyo95Umr0DicN6Gx8uBLT531g5N09vLhWMh1UkgM2F
+        DlaLCYDeQADAzZEv4+DtSaTIHcHOrkOFgDb/m7dfTjn05hIE4oYgQT95Z3Mhw/9iAmAQ2BGEgZBReZKq
+        PIkgBaRz+SM20FtBQJv/4HKUS9oJyDUWpuwhGkoTKeyyZbEAkAC2BqFdUyrPrvxA2T5fHWVM92YQ0OZ/
+        64ZLuhlv+heEfWCKTdSFBrGNgv7aYgEgFwwAeKsA2/K95RqD3uaeo8zGvx4C2vyH0maCHanu4CwDKrWe
+        NbuThboPYFjFLIS/bQgEvj5vmVV5tuf7yvb59dEwlpTkj9KoAm8vwZpd7dSFQ2zv7tXmfwsAbBxsYzCf
+        xvchgBBgm1001Rb8NqPCRwAjS4FbCUJ9QKXYnu8jX6alwIZohIZYpGCm6hxM0NrZfdRAqWTzA7i49OQS
+        UMYl4MNQAkO0IoDzbvc5AEa0nSAcCxawLddLUpUnGWQZBjPGNhK2LF+eSq9E8wsg4+Zoz/YRjAQA/eTd
+        Vwt5CKgUAOjDWw70/XDYnu9j0C3fXLCpNsac8WOxDekrCFTu3n7BQD7N+oE9wQCAKfuxjIFCHgMuBQCS
+        BGQloMNJ8Fq+u6zPMLkxzpzmJt9AoJIP9ggBXbkEHZn+YAQAQmyjNpwkXPh0WjEBkAoGAAS9bpoV6fIG
+        K0IIpjbW+wIClX6qTyJY3beVnlySQBDAcV/hnFv6C70CUGwAgLcS4Pssi1IuKzK7yajynl/yAwSq4Uhv
+        XrmsH9xN3g3AJiAhwDLaefCT4Ba+P4oNgK14UwHfN/KL2TY6nfLvCy8HBNTQTzWYXyDoySVY2bc1KA+c
+        wZI7kYLgRAAjS4GtQH8Q2nlnvp91OX/UMSk5BJRiZpUU8xAC2rN97Eh1QzCqQffiqJdwFZx7a0AAMKL2
+        IQj4fVjQ72bKngcoFwRmjh9fNZV8JIKVvVvpDcr835Dt2EYHtlmk9iiu+oFXgzE0XJ5Ob2XA9U8Zg6JD
+        QClmNDWxsErML4CUm2N5XyuOG5Db62A1zbV9RIIJAAdYSyBuXhCsyOxmTbbDX09VRAg019dy8uQW6sLh
+        qqjhJ4Rge6qT53teC0b4LwRIsZ7NXVlixaleXIpyuK8C5TtudxgA6HSS/Cm52ZcDt9AQmBCv5fgJ44n4
+        dAdicXpYsKx7A22ZwOwATGIb67EkpIuzYlE8AIwkAjcRoHsC/pR8jb2O/44wFBICE+K1HN8ynrBlHvVx
+        5CCZvz+fYmnXOpTrBOOhpejelwBccFvAADCibmBDUIbJ2lwHL2R2+fPpCgCB/c1fTZJCsDHRxst9O4KS
+        /QdDbCNm9xa6CEipATAAvBiUgTLoZng0samsdQKLBYHmKjU/eAVS/ty5lp7cIAEJ/0HxHBfc0UO4eP1V
+        qitxVuFtDQ6EHktu4tWsf+822R8CIcM46BHx4b+q1je/N8gFO9NdLNm7JjgXAQuRwzbXsvjaouwALDUA
+        XiYweQDB1nwvvxp4xdfz42EInDipmXjUyxArpfbt6lPK+wmZBjOaGjlhYjORKjT/UJfy2N6X2ZRoD074
+        L+gE9TxKwfm3F+1jijsiZt4Im78BsAdvNWByMFpf8dvEWj5adzLHWmN9DYEJ8VrikTDt/YN0DSZJ5XK4
+        SmGbBvFImOa6GuqjEWRQBn6BJRHsyfTyYNtKXNeBoNwEbcpWonY7ueImLEv1ShjAmwZcEozWF2zOdXPf
+        4Ct8veE83z9t1LaYPraBKY1xHNeLAqQQWEb1Xnu+X1eyZO8rrBvYHRzzgzf/v/juHv78j0X9mFK2SKDy
+        AKD49eBaXst1B+aJDSmxTYOQaWjz4y397c0O8MCe5UHa+Tc8/3+F332sqPP/UgPgRbyzAYEZPhuynfxy
+        cE3VbJSpOAAMzf3X9O8M1ttf0o7gORRFnf+XBgAjG4J2ASuDNIBcXH7Uv5oVmQBUNtMaPbCFoDXZwU93
+        PEM+SG9/AClfpja0m2jxC2qXEosp4C8EZyEGEGzL93Br73MkVEDqx2sBkHMdfrrzWTYO7glO5h+8ZzXE
+        M+zuGyRqF/3jSh0X/RXoCtpgWpzYwOJEQDYzamEIyV97N/G7PSuC9/CCHkzjL0Rtir0CUDoAjEwDNgLr
+        gtYjCZXh1t7ny3qBiNah9pagOzfIvduW0psN0K6/YRmyFVOuw5Sw8Paif1ypI4AevCggcMNqRWY3d/ct
+        L9sFIlqHKsUDbcv5a/emYCX+RobaMi75WBfRUEk+rhwt9CxBuDDkgGHlcm//Sh5O6qmAXyWF5Lnezdyz
+        dSn5oJz4G2V+kcYynuPhe1WhrwH3EwBW4h0RDlrv0O0m+dfup3jFZ0VDtLys/650Nze3PkZ7uidYib9h
+        GWILhvwrUsAFd1QYAEbyAG3A0mAOM8GabBs39jxFjxugPU0VLoEg6WS5bcsSXuh5LZihP4AUT3LKxD2l
+        yP6XHgAjUsDjBKJK0BsPt4cS6/l+3wu+PTJchQTg/rYXeLAtgFn/fd9BJLHMJ1i+3S327r9yAwC8bcHr
+        g9pXeeVwW9/f+F0isF+hYiSFYFn3em5vfZx0Pkvgsv7DMsRmLPE8hoSLvl+hABiZBnQAfw7usBN0OQn+
+        uetxnkgFoOp5BZt/df82/m3jYtrTvcGc93vDCaR8gksubidml/SjyzlZegLvBuHAQqA11831nX/kb+md
+        2o1lMP/mZDs3bXyIDQO7g2t+ACEGsYwnePgxhVPaaWU5AbAKWB3sYSh4JdvOdV1/1CsDJTb/7kwPN258
+        kBU9rcE2P4Ah12AbL2BKuPD7Jf3o0gNgZBrQAzxMAC4PfSsI/C29g+s7/0hrrke7swTm78wOctPGxTzV
+        uS745heAIR5iW3cXteHSt2eZv/4fge3BH5aCJ1KtfK7zD2zIBe6oQ6DM357p58aND/Jo+4sENuE36kvJ
+        nVjmH2iug3zpNy+VBwAjUcBmvFxARegPyY1c2/EwqzJ7tFuLYP7tqS6+uv4+Hgryct/rZYg/0xTbQMSC
+        8+8o+ceXOwLIAYsJ4NbgN5ZgWXorn9z7MMvS27RrC2j+dYO7uWHdr1nSsYaKePN7XyyJZTzE7r4cifLc
+        SemHLVPPEfhk4GgIrMrs5tqOh3k0GcAdz75qSc/8K/q2cMO6X/OXro3Bn/OPcp9cg20+i2VCY6zKADAy
+        DejCSwZWUOUtwYZcJ5/a+wj39q8kpXKV89VK1oICB5dHO17kS6/+ihd7t1WW+YeTfxvbO6kJwbm3VhkA
+        RusRvHxARQ3hnfk+ru/8I1/qWsIOXUvg0AelkPTkE9y2ZQlfXvcbXhsMUD3/Q/6ScgshczHTxpQl+ecP
+        AIwuFPK7yhvKgqTKclffcj7S8aDOC7xlaw3P93dxw7pfc/uWJfTlkpVnfgGY8kHmT95A1C7ZyT//AWBE
+        CvgNUIFb6rzB+3RqCx9p/x139S1nwNX1BQ8YiEKQVQ6PdKzms6/8jD+1v4yrFBWT8Bv1ZWUbtvErnt/m
+        ki/vNhij7I3x+fOG/9QJzATmV+YQF/S5aZamtrAh18lkM06LWYso8wDPOS6pbL6MrSIQQrAp0cYtW/7I
+        nVueYE+qO7hHeg9FlvEbJtT9iLzrcsmdZR6VfpB3fRjAOXhTAf/ex1UQKSaZcT5R+zY+Xvc2Jpl1ZXuS
+        ZDZH10AKpUqbg/XCfUl3LsHi9pX8945naE20+2pYFkVS9BCx3o2rlmJKuPyesj6O326LXA4sAT5Y2QDw
+        EoQ39TzNn1KvcX38DBZFZxGTdmV/7f2Mn3HzvNCziXu3L+WZro1e7f5quL/QkH+mLvw8qRylLPxxsP7w
+        h0aigEuBXwH1lT8aABS1MsQlkZlcU3cKC8JTqZWhkn16qSKAYeOn3Rwv9W/ngT3LeazjZXqyA5Ud7u8v
+        KQaJWB8k5zzC1f/li0fyIwCiwH8BH6iOUeFBABR1MsJ5kWl8tPZkLojMoF4W/3BIsQEgEEjhlexa3b+V
+        +/cs58+da+nODAy98avo1mLbeICG6DVk8gkiFiy4TQPgTSCwELiPis8FvDEIYiLM2ZEpfKTmJBZGpjPB
+        rClasrAYABB4V5cD9OSSvNS/jQf2rOCprnVerf5qMz6AFL1ErPeRcx/n5yvhwVW+eCy/AsAG7gQ+UV2j
+        ZH+5hIXNHGssF0VncFl0FvNCzTTIiC8BMGx6gSDhZGhNdvBU13qWdr3K2oFdJHKp6jT+vhFt/oyxNdeS
+        zGaImL54+/sPAKMhcDreikBL9UIAhndI18sIJ4eauTQ6k4siM5hhNVIvw0fdgUcKAM/KYt+bPuFk6Mj2
+        8VzPZpZ2rWNF7xb2ZgZAudVtfABDdhCxrsZx/4Kj4Oof+ubR/LYKsL9WAr8FrqtuAHjG6XVTPJ1qZVlq
+        K7cYMeZYY5kfauHUUAvzQs1MMuuoK1LyUAxPQMTIn1Nujq7sIK8l21nZt5W1A7t4uX87HZn+/TL6onoS
+        fAd1mXyA8bV/oycJYctXj+ZPLI9EAScBDwHT9SjaX2rfv0PCZqwRYa7VxLzQBGZajUw140wx44wxokSF
+        RVRayDfp6kzWoXMgyf577sS+fyqyymEwnybhZOh3UmxJ7GVTop3WZAer+rbSlR1kIJcc+f+shqW8w5Eh
+        dxC134XjrsKUsOhuf7HJ5823BvgRcBP+2bbsA41YNaPy7Mr3syvfxxPJzRjCJCYtosKiyYh5MLDijJVR
+        otImKixiwiIiLWLSIpyROIM5kvkMA06a/lyK7myCgXyKvHLpySfYNNjG9lQ3WTdHwsmSyqf3Mzz6Lf+m
+        3SQUlvETzjlmNS9sgwvv8N8j+rbxRqKAFrwVgbP0iDpUqdF/VvsGJAKJKQQGEkNIrN4McnsvjpMnr1xy
+        rkPOzaOUO/R7xGizV/Nc/nBlyuXEQlfjuDsxJVx6lwbAEULgPcCPgVo9qgrc+90J2NIFjtIGL6SkSBK2
+        PsFA+lfMGAPv+J4/HzMgzfkoFXlc2C8UEDpTX2iZxmJqQ4sZE4OkfwvC+BsAI/UCUsDtwBY9srR8L0Pu
+        JGTcQn86SX+mrOf9gw2A0VoF/AAI4MXvWlUjIRSW/CGLrlxBLATN/p61BiPmG8kFjAN+AVykR1qBer87
+        6eUA3AoqyVhOWcZTxEIfwHHbMIQvE3/7KxgRwOhLRf8d2KVHmpbvZIgOQuY36U+1ccwY35s/OAAYrWXA
+        HXh3Cmhp+UNCuFjmnZw140kao7CnPxCPHRwAjEQBCvgh3rViWlr+kCmXELXu4q9bFFkHFt4eiMcO3rrP
+        SD7gDLzCIdP06DuK3tc5gKOXIXcRsd5PNv8sV30YxHmBefQg7+F8HrgFyAT4O2gFXULksYxb+bt7niUe
+        gacfDNbjB7LRR6KAWrx8wDV6JB5h7+sI4OjazzJ/TV34U+Qc7+aXy/yf+NtfwYwARvIBA8C/4d0vqKVV
+        WhlyBWHz6ySzfSSzgTN/cAEwWq8B/5eKvFREy8fmbyNsfY3e1CYm1EFTTSC/RnABMBIFADwJfAtI6pGp
+        VXQJkcYy/p2/u2cJ42qgP122yz2P+qsEvjNG8gER4LvAP+oRehi9r3MAh99mtnkvjdHrSeWSuMp3RT4O
+        R8GfAow+MPQfeBeLaGkVR6bxBGHrJgYzSZxgmx/8XxHocLULuAFoAubp0apVWLfINUSsGxjM7OI9bwfx
+        D4H/SpVRy2l0PuAl4Evoo8NahZQhdxK2vkRPajUtdfD0qxXxtSqnmNuBScGv4N04rKV1lC4RPdjGDezq
+        XcL4Wkjl4Dx/1PXXAHhzCPwWb49AQo9grSOWECls85vMHvcbpo2BrAMXfr9ivl7llXMdgYAL3ItXSUif
+        HNQ6EvM7hIy7aYzdzbYel7wLi4K32ae6ADAaAmngP/FOD+pKQlqHY36FbfyUWOjfGEyncFy4PNgZ/+oB
+        wGgI9OHtFPwxXlSgpfVW5gfb+AVR6/+QzfdWqvkrGwCj1QN8Ffg5o4vma2kdaH7L+BVh64tknW5yDsQj
+        Fft1KxsAo5OCnXh7BH6lIaD1xuYHLHk/Eet6cs5eUnlojAV2m68GwIEQ6MDbI3C/Hu1aB5jfNB4ibF1H
+        Jt9Ox4BX0beCzV8dADgQAnuA6/EiAZ0T0BoO+x8gYn2OTH43Nz8Js8ZVvPmrBwAHQmAX3rXjP0QvEVa7
+        +V1s46dErM+QdXby5cXwzcthQeWbH6rxLqiR04MAceBrwOeAcPUNfqr7NKAQWULGD4iGvk4230tPAqaM
+        qRrzQzVeuT06EugD/hX4Jl51Ia3qMX+CkPmf1Ee/St7pxVUwtbrMD9V8G+ToSMAGrh2CwZiq6v1qjACk
+        6MM2b6Sp5m4G0mkcVbHr/BoAhw4CA/gQ3s1DkzQAKlSGbMcyvsrUxp/RMZDHcQN/pv9oVH1TgNdrZErg
+        AD8DPgasrPp2qUSZ8hXC5se58gc/1ub3pCOAYY2eEhyHFwlcQSVDsloiACHAlI8Rsb5CV/Ilmmsh51S9
+        +anowX24Gp0cfBUvJ3Ar+jhx0M2fwTZ+QNT+GOncS8xo9MCnza8B8BYQ2Iu3RHgD3uYhrcCNbtFFyPwa
+        jdEv4rptfPdxyLkVdZ5fA6C4EEgDdwMfB17UjRMgmXIDYeta5k++hVQuAQKe21YxlXwKJZ0DOJhG5wXm
+        4kUE7wFCFdP7lZYDEMLBlL8nbN1I58BqJsTxCnnokF8D4OghUIsXDfwTMFkDwGcyRAeWcTsx+y4SuR4a
+        IpDOwyV36nH8JtJTgLfS6CnBAHAb8GG8wqP6WLEfJABT/pWw/VEWzPoWObeHnT3e32nzv2XTaR2qRkcD
+        LcAXgE8C9YHt/aBHAFIMYhk/I2x9m77UDsbGvMKdOuQ/tObTTXAYGh0N7MYrNXYt3l0EWqWWKTcQMj9D
+        U80/4bg7mNsMUmrzH4Z0BHAkGh0JAMzGO1H4IaAhUL0fxAhAikFM4z5C5vfY2b2WaWO9RF+V7ufXAPAH
+        CGzgEryKQ2cThOgqaAAQgCGXY5vfpT7yCH2pNLVhyObhYj3X1wAoPwQAJuCtFPwDfj9UFCQASLEXy/gx
+        YetOuhI7aKrxjB+PVEXlHg2AYIFAAGfgRQOL8GuxkSAAQIg8pnwS2/gOxzQ9RWunw5gYJLNwwR163GkA
+        +BoEdcD/Aj4DnOy79vYzAAQg5SYs4x6i1k/pT3cRj+hDPAWWXgUotEavFPTj1R28CrgJfWPxockQbdjm
+        94jZV/CjF75H3u3i/DlgGdr8BZaOAIqpA6cFJ+MtG74XGOuL3vdTBCBFP6bxMLZxF7PG/I2NXS4xy8vw
+        6ySfBkCFgMDGWyX4DHApEKt6AAiRwZRLsY07iUeeoCeZJmpD3oHL9BtfA6DyIADeuYJFwKfxEoalP2BU
+        bgAI4WCIVVjG3cTsB+lJ9VIXhsEMNNXo7L4GQFWAoAm4HLhmCASlWzEoFwCEyGOI1VjGTwiZD9IxuIem
+        GMxuhh3d+siuBkBVgmAM3pTg74EzgWjFAUCIHKZciSl/QthczJ7+NppqvLX8TF4v62kAaBDgbSW+GC8i
+        OJdi5ghKBQAhsphy+ZDxH6ZjsIPGKNRFvM082vgaABoEB4AgDly4HwjigQOAFCkM+QKm8VMi5iPsHeyk
+        IQp1Yf3G1wDQOkQQ1ALvwFs6vIRCFiIpBgAEIEQnhlyKZdxH2HySzkQ39RGoj0I6B+ffrvtZA0DrMEFg
+        4ZUlexfexqLj8JYU/QEAIRRSvIYpH8Ey7qc2vIquwTRhSxtfA0CrgCAA75DRxXhRwTs40ulBIQAgRBpT
+        rsaQv8U2HuHMGa0s2+xim3DJ92DZDbBAZ/U1ALSKAYO6IQBcDVwATAXMogPA26ffhiGewTTuJ2Q+ya7e
+        TppqIGqDo3fuaQBolRIEJjB9CAKL8PYTNBUcAFIMYMiXMcTvsYw/UhdZT8eAF+bXhbxSXDqxpwGgVTYQ
+        ANQAJ+DtKbgMOJ43W0o8FAAIkcMQrUi5BMv4PSFjBdt7uhlXCyETTm2BtR06zNcA0PIhDMYBp+PtNDwP
+        mDgEiIMDQIgcUrQjxXNY8lFM40lOnbSL57e5WAbUhLx9+ufrt70GgFYQYGABU4ZgcDZeDcNxCMbTnWxk
+        ew8IBkG0odRqLGM5UjxJPLKJjoEktuHN7V0FF+lrtSpJ/x+9unfyLRKPSQAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
